# polybench-rs

./: .gitignore  Cargo.toml  README.md
src/: cmath.rs  f32.rs  f64.rs  lib.rs  ndarray.rs  util.rs
src/datamining/: correlation.rs  covariance.rs
src/linear_algebra/blas/: gemm.rs  gemver.rs  gesummv.rs  symm.rs  syr2k.rs  syrk.rs  trmm.rs
src/linear_algebra/kernels/: _2mm.rs  _3mm.rs  atax.rs  bicg.rs  doitgen.rs  mvt.rs
src/linear_algebra/solvers/: cholesky.rs  durbin.rs  gramschmidt.rs  lu.rs  ludcmp.rs  trisolv.rs
src/medley/: deriche.rs  floyd_warshall.rs  nussinov.rs
src/stencils/: adi.rs  fdtd_2d.rs  heat_3d.rs  jacobi_1d.rs  jacobi_2d.rs  seidel_2d.rs
src/test_cases/: 2mm.rs  3mm.rs  README.md  adi.rs  atax.rs  bicg.rs  cholesky.rs  correlation.rs  covariance.rs  deriche.rs  doitgen.rs  durbin.rs  fdtd_2d.rs  floyd_warshall.rs  gemm.rs  gemver.rs  gesummv.rs  gramschmidt.rs  heat_3d.rs  jacobi_1d.rs  jacobi_2d.rs  lu.rs  ludcmp.rs  mvt.rs  nussinov.rs  seidel_2d.rs  symm.rs  syr2k.rs  syrk.rs  trisolv.rs  trmm.rs
