[package]
name = "polybench-rs"
version = "0.2.0"
authors = ["Joseph Rafael Ferrer <rafael2x0@gmail.com>"]
edition = "2018"
license = "GPLv2"

[features]
print-result = []
std = []

[dependencies]
sgx_alloc = { git = "https://github.com/hiroki-chen/incubator-teaclave-sgx-sdk.git", branch = "v2.0.0-preview", package = "sgx_alloc" }